@@ -1,0 +1,1 @@
+declare <=> as non-member operator (reference to constant S, reference to constant S) returning weak_ordering of namespace std
