@@ -1,0 +1,1 @@
+cdecl @ @ -xc++ @ struct S; explain auto operator<=>(const S&, const S&) @ 0
